--- a/blog-single.html
+++ b/blog-single.html
@@ -49,7 +49,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt="Logo">
+                    <a class="navbar-brand" href="#"><img src="assets/img/logo-header.png" alt="Logo">
                     </a>
                 </div>
 
