--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </section>
 	<section id="team" class="">
 		<!-- =============== container =============== -->
-        <div class="container">            
+        <!-- <div class="container">            
             <div class="row">
 				<div class="title">
 				<h2>Our Team</h2>
@@ -201,7 +201,7 @@
 					</ul>
 				   </div>
                   </div>                 
-            </div>
+            </div> -->
         </div>   
 		<!-- =============== container end =============== -->		
     </section>	
