--- a/blog-single.html
+++ b/blog-single.html
@@ -70,7 +70,7 @@
                             <a class="page-scroll" href="#Gallery">Gallery</a>
                         </li>
                         <li class="active">
-                            <a class="page-scroll" href="#blog">Blog</a>
+                            <a class="page-scroll" href="#blog">Testimonials</a>
                         </li>
                         <li>
                             <a class="page-scroll" href="#contact">Contact</a>
@@ -88,7 +88,7 @@
 		<!-- =============== container =============== -->
         <div class="container">
             <div class="header-content row">
-				<h1>Blog </h1>
+				<h1>Testimonials </h1>
 			</div>
         </div>
 		<!-- =============== container end =============== -->
