--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <a class="page-scroll" href="#Gallery">Gallery</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#blog">Blog</a>
+                            <a class="page-scroll" href="#blog">Testimonials</a>
                         </li>
                         <li>
                             <a class="page-scroll" href="#contact">Contact</a>
@@ -483,7 +483,7 @@ nullam rhoncus tortor at dignissim vehicula.</p>
         <div class="container">            
             <div class="row">
 				<div class="title">
-				<h2>Our Blog</h2>
+				<h2>Testimonials</h2>
 				<p>Meet some of our lovely, passionate, positive people.</p>
 				</div>
                  <div class="col-xs-12 col-sm-4 col-md-4 wow fadeInUp animated" data-wow-delay=".1s">
@@ -491,13 +491,13 @@ nullam rhoncus tortor at dignissim vehicula.</p>
 						<img src="assets/img/blog1.JPG"/>
 					  </div>
 					  <div class="row">
-					  <div class="data">30</div>
-					  <div class="month">March</div>
+					  <!-- <div class="data">30</div>
+					  <div class="month">March</div> -->
 					  </div>
 					  <div class="row">
 					  <h3>Travelling with kids Quensland Capricorn Coast</h3>
 					  <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Vestibulum ac vehicula leo dulam nullam rhoncus tortor at dignissim vehicula.</p>
-					  <a href="blog-single.html">MORE</a>
+					  <!-- <a href="blog-single.html">MORE</a> -->
 					  </div>
                   </div>        
 				 <div class="col-xs-12 col-sm-4 col-md-4 wow bounceIn animated" data-wow-delay=".4s">
@@ -505,13 +505,13 @@ nullam rhoncus tortor at dignissim vehicula.</p>
 						<img src="assets/img/blog2.JPG"/>
 					  </div>
 					  <div class="row">
-					  <div class="data">30</div>
-					  <div class="month">March</div>
+					  <!-- <div class="data">30</div>
+					  <div class="month">March</div> -->
 					  </div>
 					  <div class="row">
 					  <h3>Travelling with kids Quensland Capricorn Coast</h3>
 					  <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Vestibulum ac vehicula leo dulam nullam rhoncus tortor at dignissim vehicula.</p>
-					  <a href="blog-single.html">MORE</a>
+					  <!-- <a href="blog-single.html">MORE</a> -->
 					  </div>
                   </div>        
 				 <div class="col-xs-12 col-sm-4 col-md-4 wow fadeInDown animated" data-wow-delay=".3s">
@@ -519,13 +519,13 @@ nullam rhoncus tortor at dignissim vehicula.</p>
 						<img src="assets/img/blog3.JPG"/>
 					  </div>
 					  <div class="row">
-					  <div class="data">30</div>
-					  <div class="month">March</div>
+					  <!-- <div class="data">30</div>
+					  <div class="month">March</div> -->
 					  </div>
 					  <div class="row">
 					  <h3>Travelling with kids Quensland Capricorn Coast</h3>
 					  <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Vestibulum ac vehicula leo dulam nullam rhoncus tortor at dignissim vehicula.</p>
-					  <a href="blog-single.html">MORE</a>
+					  <!-- <a href="blog-single.html">MORE</a> -->
 					  </div>
                   </div>        
             </div>
@@ -587,17 +587,18 @@ nullam rhoncus tortor at dignissim vehicula.</p>
 					</ul>
 
                     <p class="copyright">
-                        &copy; 2016 Be. Created By <a href="http://templatestock.co">Template Stock</a>
+   &copy; 2022 Be. Created By<a style="color:#55AEA8;"> MOBIDEV</a>
 					</p>
 
 				</div>
 				<div data-wow-delay=".6s" class="col-xs-12 col-sm-6 col-md-6 wow bounceIn  animated" style="visibility: visible; animation-delay: 0.6s; animation-name: bounceIn;">
 
 					  <section class="widget widget_text" id="text-15">
-                         <h3 class="widget-title">California, United States</h3> <div class="textwidget">786, Firs Avenue, The Mall,<br>
-                        <p>Tel: 01 234-56786<br>
-                        Mobile: 01 234-56786<br>
-                        E-mail: <a href="#">info@Be.com</a></p>
+                         <h3 class="widget-title">Nairobi, Kenya</h3> <div class="textwidget">3rd Floor, Blue Violet Plaza
+							Kamburu Road Off Ngong' Road,<br>
+                        <p>Tel: +(254)720264382<br>
+                        Mobile: +(254)720264382<br>
+                        E-mail: <a href="#">info@devs.mobi</a></p>
                         <a href="#">Get directions on the map</a> →</div>
                     </section>
 
