--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <div class="container">            
             <div class="row">
 			 <div class="col-xs-12 col-sm-12 col-md-6 wow fadeInLeft animated" data-wow-delay=".5s">
-                     <img src="assets/img/services-img.jpg" class="img-left"/>               
+                     <img src="assets/img/christina-wocintechchat-com-rg1y72eKw6o-unsplash.jpg" class="img-left"/>               
                   </div>     
                 <div class="col-xs-12 col-sm-12 col-md-6 wow fadeInRight animated" data-wow-delay=".5s">
                    <h2>Services</h2>
