--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 				</div>
 				<div class="clr2">				
 				<h2>
-					custom<br/>payments
+					Custom<br/>payments
 				</h2>
 				</div>
 				<div class="wbox">
@@ -265,38 +265,21 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 wow rotateInDownRight animated" data-wow-delay=".3s">
 				<div class="for-box-crecl">
-					<i class="fa fa-rocket"></i>
+					<i class="fa fa-wifi"></i>
 				</div>
 				<div class="clr3">				
 				<h2>
-					PRINT<br/>DESING
+					Well documented<br/>APIs
 				</h2>	
 				</div>
 				<div class="wbox">
-					<strong>sorem ipsum </strong>
-					<p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Vestibulum ac vehicula leo dulam 
-nullam rhoncus tortor at dignissim vehicula.</p>
+					
+					<p>Focus on building your business, don’t spend months integrating payments functionality.</p>
 					<a href="#" class="clr3-a">+</a>
 				</div>
 			
 			</div>
-			<div class="col-xs-12 col-sm-6 col-md-3 wow rotateInDownRight animated" data-wow-delay=".4s">
-				<div class="for-box-crecl">
-					<i class="fa fa-wifi"></i>
-				</div>
-				<div class="clr4">				
-				<h2>
-					ONLINE<br/>MARKITING
-				</h2>
-				</div>
-				<div class="wbox">
-					<strong>sorem ipsum </strong>
-					<p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Vestibulum ac vehicula leo dulam 
-nullam rhoncus tortor at dignissim vehicula.</p>
-					<a href="#" class="clr4-a">+</a>
-				</div>
-				
-			</div>
+			
 		</div>
 	 </div>
 	</section>
